unpackaged/objects/Expert__c.object
<CustomObject>
  <fields>
    <fullName>Profession_Group__c</fullName>
    <formula>CASE(Profession__c, "Oral and Maxillofacial Surgeon", "Specialty Group 4",
"Oral and Maxillofacial Pathology", "Specialty Group 3",
"Orthodontist","Specialty Group 3",
"Oral and Maxillofacial Radiology","Specialty Group 3",
"Implantologist",CASE(Contact__r.Account.Country__c, "TR","Specialty Group 4", "PL","Specialty Group 4", "HR", "Specialty Group 4", "HU", "Specialty Group 4", "CZ", "Specialty Group 4", "Specialty Group 2"),
"Special Care Dentistry","Specialty Group 2",
"Prosthodontist","Specialty Group 2",
"Periodontist","Specialty Group 2",
"Geriatric Dentist","Specialty Group 2",
"Forensic Dentistry","Specialty Group 2",
"Forensic Odontology","Specialty Group 2",
"Dental Anesthesiology","Specialty Group 2",
"Public Health Dentist","Specialty Group 2",
"Preventitive Dentist","Specialty Group 2",
"Infection Control Specialist","Specialty Group 2",
"Pediatric Dentist","Specialty Group 2",
"Endodontist","Specialty Group 2",
"General Dentist","Specialty Group 1",
"Laboratory Owner/Upper Level Management","Support Group 4",
"Dental Hygienist","Support Group 3",
"Oral Biologist","Support Group 3",
"Oral Microbiologist","Support Group 3",
"Dental Scientist","Support Group 3",
"Office Manager/Practice Administrator","Support Group 2",
"Oral Medicine Specialist","Support Group 2",
"Laboratory Technician","Support Group 1",
"Dental Assistant","Support Group 1",
"Non-Healthcare Provider", "Non-Healthcare Provider",
"No Profession Added")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please note that this field is set based on the data in the Profession (KOL) field on the related Contact</inlineHelpText>
    <label>Profession Group</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Profession__c</fullName>
    <description>Used by Clinical Affairs - also included in some logic for the Fair Market Value calculations so needed a sepaareta list. Ultimate solution would be to merge this with global profession/contcat subtype valueas.</description>
    <inlineHelpText>Add the profession of the KOL</inlineHelpText>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>General Dentist</fullName>
        </value>
        <value>
          <fullName>Endodontist</fullName>
        </value>
        <value>
          <fullName>Pediatric Dentist</fullName>
        </value>
        <value>
          <fullName>Dental Anesthesiology</fullName>
        </value>
        <value>
          <fullName>Geriatric Dentist</fullName>
        </value>
        <value>
          <fullName>Periodontist</fullName>
        </value>
        <value>
          <fullName>Prosthodontist</fullName>
        </value>
        <value>
          <fullName>Special Care Dentistry</fullName>
        </value>
        <value>
          <fullName>Implantologist</fullName>
        </value>
        <value>
          <fullName>Oral and Maxilllofacial Pathology</fullName>
        </value>
        <value>
          <fullName>Orthodontist</fullName>
        </value>
        <value>
          <fullName>Oral and Maxillofacial Radiology</fullName>
        </value>
        <value>
          <fullName>Oral and Maxillofacial Surgeon</fullName>
        </value>
        <value>
          <fullName>Dental Assistant</fullName>
        </value>
        <value>
          <fullName>Laboratory Technician</fullName>
        </value>
        <value>
          <fullName>Dental Hygienist</fullName>
        </value>
        <value>
          <fullName>Oral Medicine Specialist</fullName>
        </value>
        <value>
          <fullName>Office Manager/Practice Administrator</fullName>
        </value>
        <value>
          <fullName>Oral Biologist</fullName>
        </value>
        <value>
          <fullName>Oral Microbiologist</fullName>
        </value>
        <value>
          <fullName>Dental Scientist</fullName>
        </value>
        <value>
          <fullName>Public Health Dentist</fullName>
        </value>
        <value>
          <fullName>Preventive Dentist</fullName>
        </value>
        <value>
          <fullName>Infection Control Specialist</fullName>
        </value>
        <value>
          <fullName>Forensic Dentistry</fullName>
        </value>
        <value>
          <fullName>Forensic Odontology</fullName>
        </value>
        <value>
          <fullName>Laboratory Owner/Upper Level Management</fullName>
        </value>
        <value>
          <fullName>Non-Healthcare Provider</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Professor_Assoc_Professor_at_distinguish__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Professor/Assoc Professor, Dean, Associate Dean or Dept. Chair at a college or university or dental school or dental program that is accredited by an independent agency such as the Commission on Dental Accreditation (CODA)</inlineHelpText>
    <label>Professor at university</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Prosthetics_Specialties__c</fullName>
    <inlineHelpText>Select the specialties for Lab SBU</inlineHelpText>
    <label>Lab Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Acrylics</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>Removables</fullName>
        </value>
        <value>
          <fullName>CAD/CAM Equipment</fullName>
        </value>
        <value>
          <fullName>Traditional Workflows</fullName>
        </value>
        <value>
          <fullName>Alloys</fullName>
        </value>
        <value>
          <fullName>Celtra</fullName>
        </value>
        <value>
          <fullName>Cercon</fullName>
        </value>
        <value>
          <fullName>Ceramco 3</fullName>
        </value>
        <value>
          <fullName>Kiss</fullName>
        </value>
        <value>
          <fullName>Celtra Ceram</fullName>
        </value>
        <value>
          <fullName>Stain &amp; Glaze</fullName>
        </value>
        <value>
          <fullName>Veneering</fullName>
        </value>
        <value>
          <fullName>Crown &amp; Bridges</fullName>
        </value>
        <value>
          <fullName>Veneers</fullName>
        </value>
        <value>
          <fullName>TruExpression</fullName>
        </value>
        <value>
          <fullName>TruByte</fullName>
        </value>
        <value>
          <fullName>Veroform</fullName>
        </value>
        <value>
          <fullName>Genios</fullName>
        </value>
        <value>
          <fullName>Portrait</fullName>
        </value>
        <value>
          <fullName>VIPI</fullName>
        </value>
        <value>
          <fullName>Denture Types</fullName>
        </value>
        <value>
          <fullName>Tooth set-up/ occlusion concepts</fullName>
        </value>
        <value>
          <fullName>Denture esthetics (individualization)</fullName>
        </value>
        <value>
          <fullName>Hipa</fullName>
        </value>
        <value>
          <fullName>Lucitone 199</fullName>
        </value>
        <value>
          <fullName>Flash Veneers (TBD)</fullName>
        </value>
        <value>
          <fullName>Vitallium</fullName>
        </value>
        <value>
          <fullName>Digital Dentures</fullName>
        </value>
        <value>
          <fullName>Scanner inEos X5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Published_2_5_articles_in_past_10_years__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>2-5 Scientific Books, Textbook Chapters and/or Articles Published in last 10 Years in Peer-Reviewed or other Dental or Lab Tech Journals</inlineHelpText>
    <label>Published 2-5 articles in past 10 years</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Published_6_in_peer_reviewed_or_Lab_Te__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>6 or more Scientific Books, Textbook Chapters and/or Articles Published in last 10 Years in Peer-Reviewed or other Dental or Lab Tech Journals</inlineHelpText>
    <label>Published 6+ in peer reviewed journals</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Researcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Researcher</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Responsible_of_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Responsible for the education of residents/students. Decision maker of influencer in terms of curriculum content and materials supplies used as part of educational program.</inlineHelpText>
    <label>Responsible of Education</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Restorative__c</fullName>
    <inlineHelpText>Select the specialties for Restorative SBU</inlineHelpText>
    <label>Restorative</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Impression Materials</fullName>
        </value>
        <value>
          <fullName>Composites</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Temporary Materials</fullName>
        </value>
        <value>
          <fullName>Cements</fullName>
        </value>
        <value>
          <fullName>Matrix</fullName>
        </value>
        <value>
          <fullName>Finishing &amp; Polishing</fullName>
        </value>
        <value>
          <fullName>Burs</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Trainer</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SecondarySBU__c</fullName>
    <label>Secondary SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Lab</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Instruments</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
        <value>
          <fullName>Zhermack</fullName>
        </value>
        <value>
          <fullName>VDW</fullName>
        </value>
        <value>
          <fullName>Corporate</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Senior_Leader_with_10_years_experience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Senior Academic, Political or Industry Leader with 10+ years experience in dentistry/healthcare/science</inlineHelpText>
    <label>Senior Leader with &gt;10 years experience</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Thought_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thought Leader</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Tier1_Criteria__c</fullName>
    <formula>IF(Senior_Leader_with_10_years_experience__c = TRUE,1,0) +  IF(Published_6_in_peer_reviewed_or_Lab_Te__c=TRUE,1,0)+IF( President_or_member_of_a_board_of_direct__c =TRUE,1,0)+IF( Dean_senior_university_administator_or__c =TRUE,1,0)+IF( Lectured_5_at_dental_meetings__c =TRUE,1,0)+IF( Board_of_directors_of_a_Fortune_500__c =TRUE,1,0)+IF( Member_national_international_think_tank__c =TRUE,1,0)+IF( X1_patents_in_a_related_field__c =TRUE,1,0)+IF( science_and_technology_product_dev__c =TRUE,1,0)+IF( Master_Technician_Lab_Owne__c =TRUE,1,0)+IF( Owner_Director_Practice_Consulting_Co__c = TRUE, 1,0)+IF( Digital_Experience_Advanced__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier1 Criteria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Tier2_Criteria__c</fullName>
    <formula>IF( More_than_5_years_experience__c = TRUE,1,0)+IF( Lectured_10_times_in_prior_5_years__c = TRUE,1,0)+IF( Director_or_similar_in_area_of_expertise__c =TRUE,1,0)+IF( Published_2_5_articles_in_past_10_years__c =TRUE,1,0)+IF( Professor_Assoc_Professor_at_distinguish__c =TRUE,1,0)+IF( Owner_dental_company_Tier2__c =TRUE,1,0)+IF( Certified_dental_technician__c =TRUE,1,0)+IF( Clinical_decision_maker__c =TRUE,1,0)+IF( Hygienist_with_5_years_experience__c =TRUE,1,0)+IF( Hygienist_with_director_level_experience__c =TRUE,1,0)+IF(  Dental_Hygiene_Faculty_Position_Natiojna__c  =TRUE,1,0)+ IF( Committee_Chair_of_a_prof_org__c =TRUE,1,0)+IF( Digital_Experience_Trainer__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier2 Criteria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Tier3_Criteria__c</fullName>
    <formula>IF( Owner_Practice_Tier3__c =TRUE,1,0)+IF( Clinician_or_scientist_with_2_to_5_years__c =TRUE,1,0)+IF( Associate_or_Assistant_Professor__c =TRUE,1,0)+IF( Dental_Hygiene_Faculty_Position__c =TRUE,1,0) + IF( Lectured_5_times_in_prior_5_years__c =TRUE,1,0) + IF( Responsible_of_Education__c =TRUE,1,0) +IF( Digital_Experience__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier3 Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Tier_Help__c</fullName>
    <description>A field used to copy information from formula field "Tier__c" to a text field upon modification or creation of record. This field is needed to be used when pre-setting values in Quick Actions for related Expert Contract</description>
    <label>Tier Help</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Tier__c</fullName>
    <formula>IF( Not_a_Healthcare_Professional__c, "NON-HEALTHCARE PROVIDER",
IF( Tier1_Criteria__c &gt;3,"TIER 1", IF( Tier2_Criteria__c &gt;2,"TIER 2",IF( Tier3_Criteria__c&gt;0 ,"TIER 3","NO TIER INFO ADDED"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Train_the_Trainer_Educator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TtT Educator</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Treatment_Center__c</fullName>
    <label>Treatment Centers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Teneo</fullName>
        </value>
        <value>
          <fullName>Sinius</fullName>
        </value>
        <value>
          <fullName>Sinius TS</fullName>
        </value>
        <value>
          <fullName>Sinius CS</fullName>
        </value>
        <value>
          <fullName>Intego TS</fullName>
        </value>
        <value>
          <fullName>Intego CS</fullName>
        </value>
        <value>
          <fullName>Intego Pro TS</fullName>
        </value>
        <value>
          <fullName>Intego Pro CS</fullName>
        </value>
        <value>
          <fullName>Intego Turn</fullName>
        </value>
        <value>
          <fullName>Vionex</fullName>
        </value>
        <value>
          <fullName>C-Generation</fullName>
        </value>
        <value>
          <fullName>M-Generation</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TtT_trained_speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TtT trained speaker</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belgium: Institut national d'assurance maladie-invalidite</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Estiona: Terviseaneti registrid</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France: RPPS-Repertoire Partage des Professionnels de Sante</fullName>
        </value>
        <value>
          <fullName>Germany: LANR-Lifelong Physician Number</fullName>
        </value>
        <value>
          <fullName>Italy: Codice fiscale</fullName>
        </value>
        <value>
          <fullName>Latvia: LV VM Veselibas inspekcija</fullName>
        </value>
        <value>
          <fullName>Lithuania: VALSTYBINE AKREDITAVIMO SVEIKATOR PRIEXIUROS</fullName>
        </value>
        <value>
          <fullName>Netherland: BIG-register</fullName>
        </value>
        <value>
          <fullName>Norway</fullName>
        </value>
        <value>
          <fullName>Sweden</fullName>
        </value>
        <value>
          <fullName>Switzerland: GLN/EAN</fullName>
        </value>
        <value>
          <fullName>UK: GMC-General Medical Council</fullName>
        </value>
        <value>
          <fullName>US: NPI</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>VDW_Specialties__c</fullName>
    <label>VDW Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>VDW Endo System</fullName>
        </value>
        <value>
          <fullName>Reciproc</fullName>
        </value>
        <value>
          <fullName>Reciproc Blue</fullName>
        </value>
        <value>
          <fullName>R-Pilot</fullName>
        </value>
        <value>
          <fullName>Mtwo</fullName>
        </value>
        <value>
          <fullName>FlexMaster</fullName>
        </value>
        <value>
          <fullName>Eddy</fullName>
        </value>
        <value>
          <fullName>VDW Ultra</fullName>
        </value>
        <value>
          <fullName>Guttafushion</fullName>
        </value>
        <value>
          <fullName>BeeFill 2 in 1</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Valid_FMV_Exception__c</fullName>
    <inlineHelpText>Checked if a valid FMV exception exists</inlineHelpText>
    <label># Valid  FMV Exceptions</label>
    <summaryFilterItems>
      <field>FMV_Exception_request__c.Status__c</field>
      <operation>equals</operation>
      <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>FMV_Exception_request__c.KOL_information__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>VdwKol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VDW KOL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>X1_patents_in_a_related_field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>1+ patents in a related field</inlineHelpText>
    <label>1+ patents in a related field</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ZhermackClinical__c</fullName>
    <label>Zhermack Clinical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Hydrogum 5</fullName>
        </value>
        <value>
          <fullName>Hydrocolor 5</fullName>
        </value>
        <value>
          <fullName>Neocolloid</fullName>
        </value>
        <value>
          <fullName>Orthoprint</fullName>
        </value>
        <value>
          <fullName>Tropicalgin</fullName>
        </value>
        <value>
          <fullName>Hydrogum</fullName>
        </value>
        <value>
          <fullName>Zetalgin</fullName>
        </value>
        <value>
          <fullName>Pinkalgin</fullName>
        </value>
        <value>
          <fullName>MX-300</fullName>
        </value>
        <value>
          <fullName>Freealgin</fullName>
        </value>
        <value>
          <fullName>Hydrorise</fullName>
        </value>
        <value>
          <fullName>Hydrorise Implant</fullName>
        </value>
        <value>
          <fullName>Elite HD+</fullName>
        </value>
        <value>
          <fullName>Zetaplus</fullName>
        </value>
        <value>
          <fullName>Oranwash</fullName>
        </value>
        <value>
          <fullName>Sympress</fullName>
        </value>
        <value>
          <fullName>Occlufast</fullName>
        </value>
        <value>
          <fullName>Occlufast+</fullName>
        </value>
        <value>
          <fullName>Acrytemp</fullName>
        </value>
        <value>
          <fullName>Elite Glass</fullName>
        </value>
        <value>
          <fullName>Elite Soft Relining</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ZhermackHygiene__c</fullName>
    <label>Zhermack Hygiene</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Zeta 1 Ultra</fullName>
        </value>
        <value>
          <fullName>Zeta 2 Enzyme</fullName>
        </value>
        <value>
          <fullName>Zeta 2 Sporex</fullName>
        </value>
        <value>
          <fullName>Zeta 3 Soft</fullName>
        </value>
        <value>
          <fullName>Zeta 3 Wipes Total</fullName>
        </value>
        <value>
          <fullName>Zeta 3 Foam</fullName>
        </value>
        <value>
          <fullName>Zeta 3 Wipes Pop-up</fullName>
        </value>
        <value>
          <fullName>Zeta 4 Wash</fullName>
        </value>
        <value>
          <fullName>Zeta 5 Power Act</fullName>
        </value>
        <value>
          <fullName>Zeta 6 DryGel</fullName>
        </value>
        <value>
          <fullName>Zeta 7 Spray</fullName>
        </value>
        <value>
          <fullName>Zeta 7 Solution</fullName>
        </value>
        <value>
          <fullName>Algitray</fullName>
        </value>
        <value>
          <fullName>Gypstray</fullName>
        </value>
        <value>
          <fullName>Zeta Roll</fullName>
        </value>
        <value>
          <fullName>Safemix</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ZhermackKOL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zhermack KOL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ZhermackLab__c</fullName>
    <label>Zhermack Lab</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Elite Master</fullName>
        </value>
        <value>
          <fullName>Elite Rock</fullName>
        </value>
        <value>
          <fullName>Elite Base</fullName>
        </value>
        <value>
          <fullName>Elite Stone</fullName>
        </value>
        <value>
          <fullName>Elite Model</fullName>
        </value>
        <value>
          <fullName>Elite Arti</fullName>
        </value>
        <value>
          <fullName>Elite Ortho</fullName>
        </value>
        <value>
          <fullName>Elite Transparent</fullName>
        </value>
        <value>
          <fullName>Elite Platinum</fullName>
        </value>
        <value>
          <fullName>Zetalabor</fullName>
        </value>
        <value>
          <fullName>Titanium</fullName>
        </value>
        <value>
          <fullName>Elite Double</fullName>
        </value>
        <value>
          <fullName>Gingifast</fullName>
        </value>
        <value>
          <fullName>Elite LC Tray</fullName>
        </value>
        <value>
          <fullName>Hydrorise Implant, Quick Set version</fullName>
          <isActive>false</isActive>
          <label>Hydrorise Implant, Quick Set version</label>
        </value>
        <value>
          <fullName>Occlufast +</fullName>
          <isActive>false</isActive>
          <label>Occlufast +</label>
        </value>
        <value>
          <fullName>Occlufast Color</fullName>
          <isActive>false</isActive>
          <label>Occlufast Color</label>
        </value>
        <value>
          <fullName>Zeta 1 Ultra</fullName>
          <isActive>false</isActive>
          <label>Zeta 1 Ultra</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>science_and_technology_product_dev__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Experience in both science and technology transfer/product development</inlineHelpText>
    <label>science and technology/product dev</label>
    <type>Checkbox</type>
  </fields>
  <label>KOL information</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Profession_Group__c</columns>
    <columns>Tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
      <group>ClinicalAffairs</group>
      <group>Global_Clinical_Affairs</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>My_Experts</fullName>
    <columns>NAME</columns>
    <columns>Tier__c</columns>
    <columns>Company__c</columns>
    <columns>Country__c</columns>
    <columns>Email__c</columns>
    <columns>KOL_Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Experts</label>
  </listViews>
  <nameField>
    <label>KOL Information</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>KOL information</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Expert</fullName>
    <label>Expert</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
  <validationRules>
    <fullName>International_Expert</fullName>
    <active>true</active>
    <description>makes sure the criteria for International Experts is fulfilled</description>
    <errorConditionFormula>AND(  Tier__c !="Tier 1", OR(INCLUDES( Expert_Role__c , "International Researcher"),INCLUDES(Expert_Role__c, "International Speaker"),INCLUDES(Expert_Role__c,"International Thought Leader")))</errorConditionFormula>
    <errorMessage>You cannot select an international role if the expert does not meet the Tier 1 crieria</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>MEA_phone_mobilephone_validation</fullName>
    <active>true</active>
    <description>MEA needs a validation that phone numbers can only added to the system with the right country code
case: 00460573</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Mobile_Phone__c)),
OR(
AND(NOT(REGEX(Mobile_Phone__c,"971[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"AE")),
AND(NOT(REGEX(Mobile_Phone__c,"20[0-9]*$" )),ISPICKVAL(Contact__r.Account.Country__c,"EG")),
AND(NOT(REGEX(Mobile_Phone__c,"966[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"SA")),
AND(NOT(REGEX(Mobile_Phone__c,"965[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"KW")),
AND(NOT(REGEX(Mobile_Phone__c,"962[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"JO")),
AND(NOT(REGEX(Mobile_Phone__c,"968[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"OM")),
AND(NOT(REGEX(Mobile_Phone__c,"973[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"BH")),
AND(NOT(REGEX(Mobile_Phone__c,"98[0-9]*$" )),ISPICKVAL(Contact__r.Account.Country__c,"IR")),
AND(NOT(REGEX(Mobile_Phone__c,"92[0-9]*$" )),ISPICKVAL(Contact__r.Account.Country__c,"PK")),
AND(NOT(REGEX(Mobile_Phone__c,"974[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"QA")),
AND(NOT(REGEX(Mobile_Phone__c,"964[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"IQ")),
AND(NOT(REGEX(Mobile_Phone__c,"961[0-9]*$")),ISPICKVAL(Contact__r.Account.Country__c,"LB"))))  &amp;&amp;
OR(
ISPICKVAL($User.User_Country__c,"UAE"),
ISPICKVAL($User.User_Country__c,"Egypt"),
ISPICKVAL($User.User_Country__c,"Saudi Arabia"),
ISPICKVAL($User.User_Country__c,"Kuwait"),
ISPICKVAL($User.User_Country__c,"Jordan"),
ISPICKVAL($User.User_Country__c,"Oman"))</errorConditionFormula>
    <errorMessage>Add the right country code to fields "MobilePhone" AND "Phone" // AE=971, EG=20, SA=966, KW=965, JO=962, OM=968, BH=973, IR=98, PK=92, QA=974, IQ =964, LB=961</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>National_Expert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Tier__c !="Tier 2", OR(INCLUDES(Expert_Role__c,"National Advisor"),INCLUDES(Expert_Role__c, "National Researcher"),INCLUDES(Expert_Role__c,"National Speaker")))</errorConditionFormula>
    <errorMessage>Your Expert Role (national) does not match your Tier Criteria</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Prevent_KOLs_towards_Primary_Contacts</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.Primary_Contact__c</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please note! You are not allowed to add KOLs towards a Primary Contact</errorMessage>
  </validationRules>
</CustomObject>